src/envoy/http/service_control/envoy.yaml
admin:
  access_log_path: /tmp/envoy-access.log
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 20015
static_resources:
  clusters:
    - name: backend
      connect_timeout: 5s
      type: STATIC
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8080
    - name: gcp_metadata_cluster
      connect_timeout: 5s
      type: STATIC
      hosts:
        - socket_address:
            address: 169.254.169.254
            port_value: 80
    - name: service_control_cluster
      connect_timeout: 5s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      hosts:
        - socket_address:
            address: servicecontrol.googleapis.com
            port_value: 443
      tls_context: { sni: servicecontrol.googleapis.com }
  listeners:
    - name: server
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 9090
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: inbound_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /tmp/envoy-access.log
                http_filters:
                  - name: envoy.filters.http.service_control
                    config:
                      service_name: REPLACE_SERVICE_NAME
                      service_control_uri:
                        cluster: service_control_cluster
                        uri: https://servicecontrol.googleapis.com/v1/services/
                        timeout:
                          seconds: 5
                      services:
                        service_name: REPLACE_SERVICE_NAME
                        token_uri:
                          cluster: gcp_metadata_cluster
                          uri: http://169.254.169.254/computeMetadata/v1/instance/service-accounts/default/token
                          timeout:
                            seconds: 5
                        service_control_uri:
                          cluster: service_control_cluster
                          uri: https://servicecontrol.googleapis.com/v1/services/
                          timeout:
                            seconds: 5
                      rules:
                        patterns:
                          http_method: GET
                          uri_template: /test
                        requires:
                          service_name: REPLACE_SERVICE_NAME
                          operation_name: "test"
                          api_key:
                            api_keys:
                              query: "key"
                            allow_without_api_key: true
                          api_name: "Bookstore"
                          api_version: "1.0"
                  - name: envoy.router
                route_config:
                  name: backend
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: backend
                            timeout: 0s
